--- a/huodong2/index.html
+++ b/huodong2/index.html
@@ -75,9 +75,9 @@
    })
  })
   </script>
-<script src="src/settings.5dc2f.js" charset="utf-8"></script>
+<script src="src/settings.fbd8f.js" charset="utf-8"></script>
 
-<script src="main.9834c.js" charset="utf-8"></script>
+<script src="main.1cf87.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
